Fix delete team buttons spacing

--- a/timo_frontend/app/styles/components/about-team-modal.scss
+++ b/timo_frontend/app/styles/components/about-team-modal.scss
@@ -96,7 +96,9 @@
     margin-right: auto;
 
     @include mobile {
+      font-size: 13px;
       margin-bottom: 16px;
+      margin-left: auto;
     }
   }
 
